fix(about): separator alignment

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,7 @@
 
 html,
 body {
-  @apply overflow-x-hidden;
+  @apply overflow-x-clip;
 }
 
 h1,
